--- a/Calculator/.project
+++ b/Calculator/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>java10_event</name>
+	<name>Calculator</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1625133011993</id>
+			<id>1625133011986</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
