--- a/java00_chatting/.project
+++ b/java00_chatting/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>bitCinema</name>
+	<name>java00_chatting</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1626681291332</id>
+			<id>1627039285693</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
